css/blogs.css
.blogs-events-section {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  padding: var(--large-ultimate) var(--side-gutter);
  background-color: var(--surface-dim);
}

.blogs-section {
  grid-column-start: 1;
  grid-column-end: 7;
}

.section__title {
  padding: var(--medium) 0;
  margin-bottom: var(--large);
}
.section__title * {
  display: inline;
}

.section__title > h2 {
  color: var(--neutral);
}

.section__title > p {
  border-left: 1px solid var(--surface-mute);
  padding-left: var(--small);
  margin-left: var(--small);
  color: var(--red-dim);
}

.blogs-cards-wrapper {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: var(--large-ultimate);
  color: var(--neutral);
}

.blog-card-title {
  padding-top: var(--medium);
  padding-bottom: var(--small-extra);
}

.events-section {
  grid-column-start: 7;
  grid-column-end: -1;
}

.event {
  margin-bottom: var(--large-ultimate);
}

.event__date {
  width: 50px;
  height: 50px;
  background-color: var(--red-dim);
  color: var(--surface);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  float: left;
  margin-right: var(--medium);
}

.event__desc {
  display: flex;
  flex-direction: column;
  gap: var(--small);
  color: var(--surface-shade);
}

.event__desc p:first-child {
  color: var(--neutral);
}

